Fixed a ref. Changed font size, looks more readable to me that way.

--- a/tafaseer_group/03_results/paper.bib
+++ b/tafaseer_group/03_results/paper.bib
@@ -104,7 +104,7 @@
   title = {Al-{{Baydāwī}}},
   booktitle = {Encyclopedia of the {{Medieval Chronicle}}},
   author = {Krauss-Sánchez, Heidi R.},
-  editor = {Dunphy, Graeme and Bratu, Cristian [sic]}
+  editor = {Dunphy, Graeme and Bratu, Cristian}
 }
 
 @inreference{ei_abuhayyan,
