Another paragraph transliterated and references added.

--- a/tafaseer_group/03_results/paper.bib
+++ b/tafaseer_group/03_results/paper.bib
@@ -115,6 +115,16 @@
   editor = {Fleet, Kate and Krämer, Gudrun and Matringe, Denis and Nawas, John and Rowson, Everett}
 }
 
+@inreference{ei_almawardi,
+  edition = {2nd},
+  title = {Al-{{Māwardī}}},
+  booktitle = {Encyclopaedia of {{Islam}}},
+  author = {Sharif, M. M.},
+  editor = {Bearman, P. and Bianquis, Th. and Bosworth, C. E. and van Donzel, E. and Heinrichs, W. P.},
+  date = {2002-08-08},
+  options = {useprefix=true}
+}
+
 @inreference{ei_alfiruzabadi,
   edition = {2nd},
   title = {Al-{{Fīrūzābādī}}},
