--- a/tafaseer_group/03_results/paper.rmd
+++ b/tafaseer_group/03_results/paper.rmd
@@ -24,7 +24,7 @@ How has Islamic interpretation of the Quran changed over time? Have certain sect
 
 ## 1.1 A note on transliteration
 
-The transliteration system used is that of the German Oriental Society[^dmg_url]. We have tried to be consistent in our transliteration of Arabic words (and sometimes Persian names); for the inconsistencies that remain (i.e., vowelisation was sometimes added where it helps the flow of pronounciation) we ask the reader's digression. With regards to diphtong phonemes we have opted towards the variant employing the combination of one consonantal and one vowel representation which we feel best evokes a "closer-to-correct" pronounciation in readers not trained in Arabic. Proper names were translterated starting with capital letters only at the beginning of a sentence or if they are a person's or a place's name. Words that have found their way into English[^englishwords], and which the reader can be assumed to be familiar with, were only transliterated if part of a group of other Arabic words.
+The transliteration system used is that of the German Oriental Society[^dmg_url]. We have tried to be consistent in our transliteration of Arabic words (and sometimes Persian names); for the inconsistencies (i.e., vowelisation was sometimes added where it helps the flow of pronounciation, etc.) that remain we ask the reader's digression. As regards to diphtongs we have opted towards the variant employing the combination of consonant-plus-vowel which we feel best evokes a "closer-to-correct" pronounciation in readers not trained in Arabic. Proper names were transliterated starting with capital letters only at the beginning of a sentence or if they are a person's or a place's name. Words that have found their way into English[^englishwords], and which the reader can be assumed to be familiar with, were only transliterated if belonging to a group of other Arabic words.
 
 [^dmg_url]: [http://www.dmg-web.de/](http://www.dmg-web.de/)
 
@@ -100,21 +100,19 @@ For the second cluster, geography seems to be the unifying factor. Arabic gramma
 
 If there is a latent, unifying factor to the *mufassirūn* of the third cluster, it is not immediately apparent to us. The exegetes were not contemporaneous to one another with *ar-Rāzī* preceding *al-Fayrūzābādī* by two centuries. Geography certainly did not connect the writers. *Abū Ḥayyān* (@ei_abuhayyan) and *al-Qurṭubī* were both born in Muslim Spain and ultimately settled in Egypt (Ruano, n.d.). Al-Khazin lived in Syria which also was briefly the home of Persian-born *al-Fayrūzābādī* who also spent his life in Jerusalem, Mecca, and Yemen (@ei_alfiruzabadi). *ar-Rāzī* lived in what is now Iran and Afghanistan (@mcauliffe1991). In terms of doctrinal leanings, *Abū Ḥayyān* was a traditionalist and admirer of *Ibn Taimīya* (@ei_abuhayyan) while *ar-Rāzī*, though ostensibly a critic of *muʿtazila* theology, is seen to have incorporated heterodox tenets emphasizing reason and *taʾwīl* or figurative reading in Quranic interpretation (Jaffer, 2015). Unfortunately, the inability to obtain reliable word counts at the verse-level (and therefore our inspection at the chapter-level) may have adversely affected the quality of the groupings calculated by Gephi.
 
-TODO: DMGize, mark citations
+The last cluster of our analysis resulted in a predictable grouping of exegetes. The primary characteristic that unified these authors was their choice of school of jurisprudence. Although these exegetes were all from different time periods and, for the most part, varying geographical locations the analogous school of thought when approaching the interpretations of the Quran was similar enough to differentiate this group from the rest of our corpus. Amongst the four authors in this cluster three were from the school of *aš-šāfiʿī* and one from the school of *al-ḥanafī*.
 
-The last cluster of our analysis resulted in a predictable grouping of exegetes. The primary characteristic that unified these authors was their choice of school of jurisprudence. Although these exegetes were all from different time periods and, for the most part, varying geographical locations the analogous school of thought when approaching the interpretations of the Quran was similar enough to differentiate this group from the rest of our corpus. Amongst the four authors in this cluster three were from the school of šāfiʿī and one from the school of ḥanafī.
+*Al-Māwardī* was an Islamic jurist born in Basra, Iraq during 364AH (@ei_almawardi). During his time he was considered a high profile figure appointed with various significant responsibilities, including serving as a diplomat for the caliphate and eventually appointed chief Iman of Baghdad (Zahoor, 1998) . The cities where *al-Māwardī* lived were known to be hubs of the *muʿtazila* school of thought, so some found it peculiar that the chief *qādī* of Baghdad (known hub of *muʿtazila* jurisprudence) was in fact associated with the šāfiʿī school of thought. He was later condemned for his *muʿtazila* sympathies. *Al-Māwardī* was known for his works in islamic legal principles, in fact in 429 AH the caliph *al-Qādir* summoned four jurists from each school of jurisprudence to write a legal epitome. (@ei_almawardi) *Al-Māwardī* was chosen to represent the school of šāfiʿī. Amongst the four jurists the Caliph favored *al-Māwardī* and appointed him chief Imam. (@ei_almawardi)
 
-TODO: DMGize, mark citations
-
-Al–Mawardi was an Islamic jurist born in Basra, Iraq during 364AH (Sharif, 2002). During his time he was considered a high profile figure appointed with various significant responsibilities, including serving as a diplomat for the caliphate and eventually appointed chief Iman of Baghdad (Zahoor, 1998) . The cities where al-mawari lived where known to be hubs of the Mu'tazaila school of thought, so some found it peculiar that the chief qadi of Baghdad (known hub of Mu'tazaila jurisprudence) was in fact associated with the šāfiʿī school of thought. He was later condemned for his *muʿtazila* sympathies. Al-Mawardi was known for his works in islamic legal principles, in fact in 429 AH the caliph Al-Qadir summoned four jurist from each school of jurisprudence to write a legal epitome.(Sharif, 2002) Al-Mawardi was chosen to represent the school of šāfiʿī. Amongst the four jurist the Caliph favored Al-Mawardi and appointed chief imam. (Sharif, 2002) Along with the school of jurisprudence a common factor amongst most of the authors was their interest or relation in Islamic law. 
+Along with the school of jurisprudence a common factor amongst most of the authors was their interest in or relation to Islamic law.
 
 TODO: DMGize, mark citations
 
-Ibn 'Abd al-Salam was born in Damascus in year 577AH(Salahi) much after Abu al-Layth Al Samarqandi and Al–Mawardi. During his time he was the leading authority in the šāfiʿī Jurisprudence and most famous for his interpretations of Islamic legal principles. Unlike al mawari ,Abd al-Salam was known to be defiant of customs he deemed “unsanctioned”. He even went as far as condemning those who follow these unsanctioned customs regardless of status; most notably the ruler of Damascus As-Salih Ismail.(Jackson, 1996) This condemning led to his imprisonment and eventual emigration to Cairo, Egypt. In Cairo he was credited as the first jurist to teach Quranic commentary in Egypt. (Salahi) Like Al-Mawardi, Al- Salam was a world renowned scholar of fatwas. Al-salam was so respected, islamic jurist like al-Hafiz al-Mundhiri stopped giving fatwas stating "It does not behove any jurist to give a fatwa where Izz al-Din(Ibn 'Abd al-Salam) happens to be present."(Salahi) Both Ibn 'Abd al-Salam and Al-Mawardi were highly respected scholars of their time especially in regards to islamic law. Both authors were advisors to their respected islamic governments of their time,(Jackson, 1996) another factor which may have attributed to the groups of these authors in the same cluster. 
+Ibn 'Abd al-Salam was born in Damascus in year 577AH(Salahi) much after Abu al-Layth Al Samarqandi and *al-Māwardī*. During his time he was the leading authority in the šāfiʿī Jurisprudence and most famous for his interpretations of Islamic legal principles. Unlike al mawari ,Abd al-Salam was known to be defiant of customs he deemed “unsanctioned”. He even went as far as condemning those who follow these unsanctioned customs regardless of status; most notably the ruler of Damascus As-Salih Ismail.(Jackson, 1996) This condemning led to his imprisonment and eventual emigration to Cairo, Egypt. In Cairo he was credited as the first jurist to teach Quranic commentary in Egypt. (Salahi) Like *al-Māwardī*, Al- Salam was a world renowned scholar of fatwas. Al-salam was so respected, islamic jurist like al-Hafiz al-Mundhiri stopped giving fatwas stating "It does not behove any jurist to give a fatwa where Izz al-Din(Ibn 'Abd al-Salam) happens to be present."(Salahi) Both Ibn 'Abd al-Salam and *al-Māwardī* were highly respected scholars of their time especially in regards to islamic law. Both authors were advisors to their respected islamic governments of their time,(Jackson, 1996) another factor which may have attributed to the groups of these authors in the same cluster. 
 
 TODO: DMGize, mark citations
 
-Jalal al-Din al-Suyuti was born in Cario, Eygpt in the year 849AH (al-Suyuti, 2007) making his work the most recent amongst the cluster. Like most authors in the cluster he was a islamic jurist from the school of šāfiʿī. He was acknowledged as one of the more recent authority of the šāfiʿī school whose degree of ijthad was accepted by most(Meri,2005). Jalal al-Din al-Suyuti lacked a particular interest in islamic law and was not known to be a head advisor for any Islamic governments like both Ibn 'Abd al-Salam and Al-Mawardi. Although his father being a judge of a islamic state may have influenced any emphasis on law(islamic) within his writings and thus placing him within this cluster.(al-suyuti,2007) Unlike the other authors, al-Suyuti also studied the *ḥanafī* school of jurisprudence and was tutored by a Sufi, though his work drew primarily from šāfiʿī school of thought. Al-Suyuti's interest in the *ḥanafī* jurisprudence may account for the inclusion of Abu al-Layth Al Samarqandi in our cluster. 
+Jalal al-Din al-Suyuti was born in Cario, Eygpt in the year 849AH (al-Suyuti, 2007) making his work the most recent amongst the cluster. Like most authors in the cluster he was a islamic jurist from the school of šāfiʿī. He was acknowledged as one of the more recent authority of the šāfiʿī school whose degree of ijthad was accepted by most(Meri,2005). Jalal al-Din al-Suyuti lacked a particular interest in islamic law and was not known to be a head advisor for any Islamic governments like both Ibn 'Abd al-Salam and *al-Māwardī*. Although his father being a judge of a islamic state may have influenced any emphasis on law(islamic) within his writings and thus placing him within this cluster.(al-suyuti,2007) Unlike the other authors, al-Suyuti also studied the *ḥanafī* school of jurisprudence and was tutored by a Sufi, though his work drew primarily from šāfiʿī school of thought. Al-Suyuti's interest in the *ḥanafī* jurisprudence may account for the inclusion of Abu al-Layth Al Samarqandi in our cluster. 
 
 TODO: DMGize, mark citations
 
